--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+.header-color{
+  background: transparent!important;
+}
+
+.min-height-container{
+  background: white;
+  min-height: calc(100vh - 58px);
+}
+
+.mdl-grid{
+  background: white;
+  border-radius: 3px;
+}
+
 #landing-grid {
   text-align: center;
   position: fixed;
@@ -22,6 +36,20 @@
 }
 .material-icons {
   color:white;
+}
+
+p {
+  margin-bottom: 0!important
+}
+
+.type-writer {
+  height: 5em;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  text-align: left;
+  padding-left: 50px;
+  color:white
 }
 
 .linkNavBar::before {
@@ -63,15 +91,16 @@
 }
 .mdl-layout__drawer > .mdl-layout__title, .mdl-layout__drawer > .mdl-layout-title {
     border-bottom: 1px solid #ccbbc2;
+    padding-left: 0!important
 }
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
   color: black!important;
+  font-size:13px!important;
   font-family: Raleway-Regular;
   text-transform: uppercase;
-  font-size:13px!important;
-  padding-left:50px!important
 }
+
 
 .logo {
   width: 40px;
