--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,14 @@
   min-height: calc(100vh - 58px);
 }
 
+.min-height-container h1 {
+  margin-top:0;
+}
+
 .mdl-grid{
   background: white;
   border-radius: 3px;
+  padding: 20px!important
 }
 
 #landing-grid {
@@ -27,29 +32,29 @@
   transition: color 0.1s, background-color 0.1s;
 }
 
-.linkNavBar:hover {
-  color: #866a78;
-}
-
-.linkNavBar:focus, .linkNavBar:active {
-  color: #866a78;
-}
 .material-icons {
   color:white;
 }
 
-p {
-  margin-bottom: 0!important
+.type-writer p {
+  margin-bottom: 0!important;
+  font-size: 3rem!important;
+  padding: 20px!important;
+  font-family: Raleway-ExtraLight;
+}
+
+.middle-red {
+  color: #c87070
 }
 
 .type-writer {
-  height: 5em;
+  height: 14em;
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
   text-align: left;
   padding-left: 50px;
-  color:white
+  color:white;
 }
 
 .linkNavBar::before {
@@ -60,7 +65,7 @@ p {
   right: 0%;
   height: 3px;
   width: 100%;
-  background-color: #866a78;
+  background-color: #c87070;
   -webkit-transform-origin: center top;
           transform-origin: center top;
   -webkit-transform: scale(0, 1);
@@ -71,7 +76,7 @@ p {
 }
 
 .linkNavBar:active::before {
-  background-color: #866a78;
+  background-color: #c87070;
 }
 
 .linkNavBar:hover::before,
@@ -89,9 +94,10 @@ p {
   font-family: Raleway-Regular;
   text-transform: uppercase;
 }
+
 .mdl-layout__drawer > .mdl-layout__title, .mdl-layout__drawer > .mdl-layout-title {
-    border-bottom: 1px solid #ccbbc2;
-    padding-left: 0!important
+  border-bottom: 1px solid #906b7d;
+  padding-left: 0!important
 }
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
@@ -113,6 +119,10 @@ p {
   padding: 15px;
 }
 
+.cardContent{
+  justify-content:center;
+}
+
 .menu-button {
 font-family: Sofia-Regular;
 font-size: 30px;
@@ -125,6 +135,9 @@ font-size: 30px;
 .resume-right-col {
   color: black;
   padding: 2em;
+  justify-content: center!important;
+  display: flex!important;
+  align-items: center!important;
 }
 
 .contact-body {
@@ -145,23 +158,31 @@ font-size: 30px;
   margin-bottom: 20px;
 }
 
-.contact-grid h2 {
-  font-family: 'Anton', sans-serif;
+.contact-grid h3 {
+  font-family: Raleway-ExtraLight;
+  color:#bd8fa6;
 }
 
 .contact-grid p {
-  font-family: 'Oxygen', sans-serif;
+  font-family: Montserrat-Regular;
   font-weight: bold;
 }
 
 .contact-list i {
-  font-size: 66px;
+  font-size: 25px;
   padding-right: 5rem;
+}
+
+.mdl-list__item {
+  padding: 15px!important;
 }
 
 .avatar-img {
   height: 250px;
   padding-top: 5em;
+}
+.sub-title-resume {
+  font-size:18px
 }
 
 .banner-text {
