--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,8 @@
 
 .type-writer p {
   margin-bottom: 0!important;
-  font-size: 3rem!important;
-  padding: 20px!important;
+  font-size: 2rem!important;
+  padding: 5px!important;
   font-family: Raleway-ExtraLight;
 }
 
@@ -64,10 +64,9 @@
 .type-writer {
   height: 14em;
   position: absolute;
-  top: 50%;
+  top: 45%;
   transform: translate(0, -50%);
-  text-align: left;
-  padding-left: 50px;
+  text-align: center;
   color:white;
 }
 
