--- a/src/App.css
+++ b/src/App.css
@@ -100,9 +100,6 @@
   text-transform: uppercase;
 }
 
-.mdl-layout__drawer{
-  /* background: rgba(80, 59, 55, 0.31)!important; */
-}
 .mdl-layout__drawer > .mdl-layout__title, .mdl-layout__drawer > .mdl-layout-title {
   border-bottom: 1px solid #906b7d;
   padding-left: 0!important
@@ -115,6 +112,10 @@
   text-transform: uppercase;
 }
 
+.mdl-layout.has-scrolling-header .mdl-layout__content {
+  /* background: #29292e; */
+  overflow: visible;
+}
 
 .logo {
   width: 40px;
@@ -308,10 +309,6 @@ font-size: 30px;
   height: 140px;
   width: 140px;
   margin: auto;
-  position: absolute;
-  left: 0;
-  bottom: -2.5rem;
-  right: 0;
   box-shadow:-0px 0px 18px 2px #8d8383
 }
 
