--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -6,6 +6,8 @@
     text-align:left;
     padding: 0 7%;
     background:#2a292f;
+    width: 75%;
+    margin: auto;
 
     .TextArea {
         width: 80%; 
@@ -48,6 +50,8 @@
         align-items: start;
         padding: 5% 7%;
         color: white;
+        width: 70%;
+        margin: auto;
 
         .Journey {
             font-size: 16px;
