--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -34,6 +34,8 @@
     .Skills {
         flex-direction: row;
         padding: 0 5%;
+        width: 85%;
+        margin: auto;
 
         .SkillChart {
             flex: 1;
