--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -1,10 +1,13 @@
 .Header {
-    margin: 10px auto;
+    padding: 15px 0px 50px 15px;
+    text-align: left;
+    margin: 0!important;
 
     h1 {
         font-size: 45px;
         color: #bf8980;
         margin: 5px auto;
+        font-family: sofia-regular
     }
 
     &::before,
