--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@
   position: relative;
   text-transform: uppercase;
   transition: color 0.1s, background-color 0.1s;
+  font-size:15px!important
 }
 
 .landing-page {
