--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -6,12 +6,11 @@
     text-align:left;
     padding: 0 7%;
     background:#2a292f;
-    width: 75%;
+    // width: 80%;
     margin: auto;
 
     .TextArea {
         width: 80%; 
-        margin: auto;
     } 
 
     .Journey {
@@ -48,10 +47,9 @@
     .About {
         flex-direction: row;
         align-items: start;
-        padding: 5% 7%;
+        padding: 40px;
         color: white;
-        width: 70%;
-        margin: auto;
+        justify-content: space-around;
 
         .Journey {
             font-size: 16px;
@@ -59,7 +57,6 @@
         }
         .TextArea {
             width: 70%; 
-            margin: auto;
         } 
 
         .ImageArea {
