--- a/src/components/Work/ShowCase/ShowCase.scss
+++ b/src/components/Work/ShowCase/ShowCase.scss
@@ -5,6 +5,11 @@
     flex-direction: column;
     justify-content: center;
 }
+
+.showcase-container{
+    padding-top: 40px;
+}
+
 .filter-wrap {
     display: inline-block;
     position: relative;
@@ -16,7 +21,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family:montserrat-light
+        font-family:montserrat-light;
     }
 
     .row {
@@ -56,6 +61,7 @@
     padding: 1rem;
     text-align: justify;
     font-size: 0.1px;
+    
 }
 
 .container:after {
@@ -81,7 +87,7 @@
 
     img {
         width: 100%;
-        height: 90%;
+        height: 100%;
         transform: scale(1.00);
         transition: all 0.5s ease-in-out;
         opacity: 0.7;
@@ -121,7 +127,7 @@
     &:hover {
         img {
             opacity: 1;
-            height: 96%;
+            height: 95%;
             transform: scale(1.03);
             border-radius:3%
         }
@@ -160,12 +166,12 @@
     }
 
     .filter-wrap {
-        margin: 0 auto 90px -25px;
+        margin: auto;
 
         .filter {
             padding: 5px 50px;
             // margin: 0 25px;
-            font-size: 16px;
+            font-size: 18px;
         }
     }
 }
