--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -13,7 +13,7 @@
     &::after {
         font-family: 'La Belle Aurore', cursive;
         font-size: 18px;
-        color: #515152;
+        color: rgb(191, 191, 196);
     }
 
     &::before {
