--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -40,6 +40,18 @@
             margin: 25px auto;
             // border-radius: 50%;
         }
+
+        .qrCodeMobile {
+            padding-top: 0;
+            height: 100px;
+            width: 100px;
+
+            img {
+                height: 130px;
+                width: 130px; 
+            }
+          
+        }
     }
 }
 
@@ -69,8 +81,8 @@
             text-align: right;
 
             img {
-                height: 300px;
-                width: 300px;
+                height: 250px;
+                width: 250px;
                 margin: 25px auto;
                 // border-radius: 50%;
             }
