--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -34,7 +34,7 @@
                     input,
                     textarea {
                         width: 100%;
-                        color: red;
+                        color: white;
                         background: #585253d9;
                         box-sizing: border-box;
                         border: 0;
