--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,15 @@
   background: transparent!important;
 }
 
-.min-height-container{
-  background: transparent;
-  min-height: calc(100vh - 58px);
-  padding-top: 4em
-}
-
-.vcard-container {
-  background-color: white;
-}
-
-.min-height-container-resume{
-  background: white;
-  min-height: calc(100vh - 58px);
+.title-landing {
+  color: rgb(160, 118, 111);
+  font-size:83px;
+  font-family: PlayfairDisplay-Regular; 
+  margin-bottom:0;
 }
 
 .mdl-tabs__tab-bar{
   background:white
-}
-
-.min-height-container h1 {
-  margin-top:0;
-}
-
-.mdl-grid{
-  background: white;
-  border-radius: 3px;
 }
 
 #landing-grid {
@@ -114,7 +97,6 @@
 }
 
 .mdl-layout.has-scrolling-header .mdl-layout__content {
-  /* background: #29292e; */
   overflow: visible;
 }
 
@@ -129,179 +111,11 @@
   border-radius:28px;
 }
 
-.cardContent{
-  justify-content:center;
-}
-.cardContent h3 {
-margin-bottom: 0!important
-}
-
 .menu-button {
-font-family: Sofia-Regular;
-font-size: 30px;
-}
-
-.projects-grid {
-  display: flex;
-}
-
-.resume-right-col {
-  color: black;
-  padding: 2em;
-  justify-content: center!important;
-  display: flex!important;
-  align-items: center!important;
-}
-.contact-body{
-  padding-top: 2em 
-}
-.container-body {
-  margin: auto;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  padding-top: 2em;
-}
-
-.contact-grid {
-  text-align: center;
-  justify-content: center;
-  width: 85%;
-  /* height: 550px; */
-  color: black;
-  margin-bottom: 20px;
-  background:none
-}
-
-.contact-grid h3 {
-  font-family: PlayFair-Display;
-  color:#a6736c;
-}
-
-.contact-grid p {
-  font-family: Montserrat-Regular;
-  font-weight: bold;
-}
-
-.contact-list i {
-  font-size: 25px;
-  padding-right: 5rem;
-}
-
-.mdl-list ul {
-  display: flex!important;
-}
-
-.mdl-list__item {
-  justify-content: center;
-  padding:0
-}
-
-.mdl-list__item li {
-  list-style: none;
-  padding: 13px;
-  font-size: 1.7em
-}
-
-.mdl-list__item li:hover {
-  opacity: .7;
- }
-
-.mdl-list__item li a {
-  color:rgb(34, 32, 39)!important;
-}
-.avatar-img {
-  height: 250px;
-  padding-top: 5em;
-}
-.sub-title-resume {
-  font-size:18px;
-  font-family: Montserrat-Light
-}
-.text-resume {
-  font-Family: Montserrat;
-  padding:15px;
-  max-width:500px
-}
-.banner-text {
-  opacity: .8;
-  width: 75%;
-  margin: auto;
-  border-radius: 10px;
-}
-
-.banner-text h1 {
-  font-size: 66px;
-  color: black;
-}
-
-.banner-text p {
-  color: black;
-  font-size: 20px;
-  padding: 1em;
-}
-
-.social-links {
-  display: flex;
-  justify-content: space-between;
-  width: 50%;
-  margin: auto;
-}
-
-.social-links i {
-  color: black;
-  font-size: 5em;
-  padding: 8px;
-}
-
-.about-wrapper {
-  position: relative;
-  width: 100%;
-  padding: 0;
-  z-index: 1;
-}
-
-.card {
-  width: 100%;
-  border-radius: 4px;
-  box-shadow: 0px 0px 4px 0px #e0e0e0;
-  font-family: Montserrat;
-  position: relative;
-  margin: 0 auto;
-}
-.header-bg {
-  height: 120px;
-  background:#a0766f54;
-  background-size: cover;
-  background-position: center;
-  border-radius: 4px;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
-  position: relative;
-}
-.info-container {
-  padding: 55px 40px 0px 40px;
-  background: white;
-}
-.info-container p.name {
+  font-family: Sofia-Regular;
   font-size: 30px;
-  margin-top: 0;
-}
-
-.info-container p.info-resume {
-  font-size: 14px;
-  padding-right: 20px;
-  padding-left: 20px;
-  color: #bdbdbd;
-  margin:0
-}
-.info-container p.name,
-.info-container p.info-resume {
-  text-align: center;
-  text-transform: uppercase;
-  font-family: raleway-regular;
-  padding-top:10px;
+  text-decoration: none; 
+  color: white;
 }
 
 .card-picture {
@@ -313,110 +127,14 @@ font-size: 30px;
   box-shadow:-0px 0px 18px 2px #8d8383
 }
 
-.center-resume {
-  display: flex;
-  justify-content: center;
-  text-align: left;
-  flex-wrap: wrap;
-}
 #qrcode{
   animation: bounce 1.55s ease infinite alternate;
   padding-top: 75%
-
 }
+
 @keyframes bounce{
   from {transform: translateY(18px);}
   to   {transform: translateY(8px);}
-}
-@keyframes socialShareAnimation {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-
-  .socialShareButton {
-      height: 50px;
-      line-height: 50px;
-      padding: 0px 25px;
-      background: #666;
-      color: #fff;
-      cursor: pointer;
-  }
-  i {
-      font-size: 50px;
-      color: #666;
-      margin: 0px 10px;
-  }
-
-#feedback-form {
-  margin: 0 auto;
-  padding: 40px 50px 0px;
-  font-family: sans-serif;
-}
-
-#feedback-form * {
-    box-sizing: border-box;
-}
-
-#feedback-form h2{
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-#feedback-form input {
-  margin-bottom: 15px;
-}
-
-#feedback-form textarea {
-  margin-bottom: 15px;
-}
-
-#feedback-form input[type=text] {
-  display: block;
-  height: 40px;
-  padding: 6px 16px;
-  width: 100%;
-  border: none;
-  border-radius:6px;
-  background-color: #f3f3f3;
-}
-
-#feedback-form textarea[type=text] {
-  display: block;
-  height: 32px;
-  padding: 6px 16px;
-  width: 100%;
-  border: none;
-  border-radius:6px;
-  background-color: #f3f3f3;
-}
-
-#feedback-form button[type=submit] {
-  display: block;
-  margin: 20px auto 0;
-  width: 140px;
-  height: 40px;
-  border-radius: 25px;
-  border: none;
-  color: white;
-  text-transform: uppercase;
-  font-family: raleway-regular;
-  font-size:12px;
-  box-shadow: 1px 4px 10px 1px #fffefe;
-  background: -moz-linear-gradient(to right, #6c5c5a 0%,#e0958b 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(to right, #6c5c5a 0%,#e0958b 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, #6c5c5a 0%,#e0958b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-}
-
-.contact-name{
-  display:flex;
-}
-.contact-lastname{
-  width:100%;
-  padding-left:10px;
-}
-.contact-firstname{
-  width: 100%
 }
 
 .wrapper ul {
@@ -471,21 +189,6 @@ font-size: 30px;
 
 }
 
-.form-contact{
-  background:white;
-  padding:5px
-}
-
-.info-contact{
-  background: #a0766f54;
-  border-radius:20px;
-  padding:5px
-}
-
-.material-icons {
-  font-size: 35px!important;
-  color: rgb(191, 191, 196)
-}
 @media screen and (min-width: 1025px) {
   .mdl-layout__drawer-button {
     line-height: 66px!important
