--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -83,6 +83,15 @@
                 width: 250px;
                 margin: 25px auto;
             }
+
+            .profilIcon {
+                border-radius: 50%;
+                border: 1px solid #e0e0e0;
+                height: 240px;
+                width: 240px;
+                margin: auto;
+                box-shadow:-0px 0px 18px 2px #8d8383   
+            }
         }
     }
 }
