--- a/src/components/Work/Works.module.scss
+++ b/src/components/Work/Works.module.scss
@@ -1,6 +1,8 @@
 .Works {
     padding: 60px 0;
-    width: 90%;
+    // width: 90%;
+    height: 100%;
+    box-sizing: border-box;
     margin: 0 auto;
     animation: pageLoad 1s;
     background:#2a292f
