--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -39,10 +39,22 @@
             margin: 25px auto;
         }
 
+        .profilIcon {
+            border-radius: 50%;
+            border: 1px solid #e0e0e0;
+            box-shadow:-0px 0px 18px 2px #8d8383   
+        }
+
         .qrCodeMobile {
-            padding-top: 0;
             height: 100px;
             width: 100px;
+            animation: bounce 1.55s ease infinite alternate;
+            padding-top: 0;
+
+            @keyframes bounce{
+                from {transform: translateY(18px);}
+                to   {transform: translateY(8px);}
+            }
 
             img {
                 height: 130px;
@@ -91,6 +103,10 @@
                 width: 240px;
                 margin: auto;
                 box-shadow:-0px 0px 18px 2px #8d8383   
+            }
+
+            .qrCodeMobile {
+                padding-top: 100%;
             }
         }
     }
