--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -9,6 +9,7 @@
     margin: auto;
 
     .TextArea {
+        padding-top: 15%;
         width: 80%; 
     } 
 
@@ -79,6 +80,7 @@
         }
         .TextArea {
             width: 60%; 
+            padding-top: 0;
         } 
 
         .ImageArea {
