--- a/src/components/Work/ShowCase/ShowCase.scss
+++ b/src/components/Work/ShowCase/ShowCase.scss
@@ -1,5 +1,3 @@
-/* Tab
----------------------------------------------------------------------- */
 .showcase {
     display: flex;
     flex-direction: column;
@@ -13,7 +11,7 @@
 .filter-wrap {
     display: inline-block;
     position: relative;
-    margin: 0 auto 50px 0;
+    margin: 0 auto 30px auto;
     z-index: 10;
     color: white;
 
@@ -32,7 +30,7 @@
         display: inline-block;
         padding: 5px 5px;
         margin: 0 5px;
-        font-size: 12px;
+        font-size: 14px;
         cursor: pointer;
     }
 
