--- a/src/components/Work/Works.module.scss
+++ b/src/components/Work/Works.module.scss
@@ -1,6 +1,5 @@
 .Works {
-    padding: 60px 0;
-    // width: 90%;
+    padding: 10% 0;
     height: 100%;
     box-sizing: border-box;
     margin: 0 auto;
