--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -42,6 +42,7 @@
                         font-size: 16px;
                         font-weight: 300;
                         outline-width: 0;
+                        font-family: Montserrat
                     }
 
                     input:focus ~ span,
