--- a/src/components/Work/ShowCase/ShowCase.scss
+++ b/src/components/Work/ShowCase/ShowCase.scss
@@ -90,7 +90,8 @@
         transition: all 0.5s ease-in-out;
         opacity: 0.7;
         background-color: black;
-        border-radius:3%
+        border-radius:3%;
+        object-fit: cover;
     }
 
     .links {
