--- a/src/components/Work/Works.module.scss
+++ b/src/components/Work/Works.module.scss
@@ -1,10 +1,17 @@
 .Works {
     padding: 10% 0;
-    height: 100%;
-    box-sizing: border-box;
-    margin: 0 auto;
-    animation: pageLoad 1s;
-    background:#2a292f
+
+}
+
+@media screen and (min-width: 960px) {
+    .Works {
+        padding: 6% 0;
+        height: 100%;
+        box-sizing: border-box;
+        margin: 0 auto;
+        animation: pageLoad 1s;
+        background:#2a292f
+    }
 }
 
 @keyframes pageLoad {
