--- a/src/components/Work/ShowCase/ShowCase.scss
+++ b/src/components/Work/ShowCase/ShowCase.scss
@@ -5,7 +5,7 @@
 }
 
 .showcase-container{
-    padding-top: 40px;
+    padding-top: 15px;
 }
 
 .filter-wrap {
@@ -173,4 +173,10 @@
             font-size: 18px;
         }
     }
+}
+
+@media screen and (min-width: 960px) {
+    .showcase-container{
+        padding-top: 40px;
+    } 
 }
